--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,4 +30,5 @@
     <string name="enter_name_hint">Enter your name</string>
     <string name="address_label_text">Address</string>
     <string name="enter_address_hint">Enter address</string>
+    <string name="enter_phone_hint">Enter phone</string>
 </resources>
