--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -57,6 +57,7 @@
     <string name="pref_header_messages">Messages</string>
     <string name="pref_header_sync">Sync</string>
     <string name="pref_header_account">Account</string>
+    <string name="pref_header_general">General</string>
 
     <!-- Messages Preferences -->
     <string name="pref_messages_title_signature">Your signature</string>
@@ -106,4 +107,27 @@
     <string-array name="multi_select_list_preference_default_value" />
 
     <string name="pref_title_account_settings">Account settings</string>
+
+    <!-- General Preferences -->
+    <string name="pref_general_name_title">Name</string>
+    <string name="pref_general_name_summary">Enter Your Complete Name</string>
+    <string name="pref_general_name_dialog_title">Your Name</string>
+    <string name="pref_general_name_dialog_message">Enter Your Complete Name</string>
+    <string name="pref_general_email_title">Email Address</string>
+    <string name="pref_general_email_summary">Enter Your Email Address</string>
+    <string name="pref_general_email_dialog_title">Enter Your Email Address</string>
+    <string name="pref_general_email_dialog_message">Enter Your Email Address</string>
+    <string name="pref_general_delivery_title">Market</string>
+    <string name="pref_general_delivery_dialog_title">Choose a delivery method</string>
+    <string-array name="pref_delivery_titles">
+        <item>Same day messenger service</item>
+        <item>Next day ground delivery</item>
+        <item>Pick up</item>
+    </string-array>
+    <string-array name="pref_delivery_values">
+        <item>SD</item>
+        <item>ND</item>
+        <item>PU</item>
+    </string-array>
+
 </resources>
